argoproj/argo-rollouts/bluegreen/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-bluegreen-active
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rollouts.prepaidcard.co.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
          service:
            name: rollout-bluegreen-active
            port: 
              number: 80
